<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello world</string>
    <string name="ButtonText_startWin">I\'m a button</string>
    <string name="logIn_text">Log In</string>
    <string name="password_text">Pass word</string>
    <string name="radioButton_listItem">Radio Button</string>
    <string name="checkBox_String">Check Box</string>
    <string name="switch_text">What does this do?</string>
    <string name="buttonLogIn_String">Log In</string>

    <string name="dialog_message">Did you want to finish and go back to start page</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="button_startChat">Start Chat</string>
    <string name="button_sendChat">Send</string>
    <string name="string_currentTemp">Current temperature</string>
    <string name="string_minTemp">Min temeperature</string>
    <string name="string_maxTemp">Max temperature</string>
    <string name="string_progressBar">ProgressBar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="title_activity_main">TestToolbar</string>
</resources>
