<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/listItemsLayOutWind"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:columnCount="2"
    android:gravity="fill"
    android:rowCount="2"

    tools:context="com.example.hliu.androidlabs.ListItemActivity">

    <RadioButton
        android:id="@+id/radioButtonID_ListItems"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:text="@string/radioButton_listItem" />

    <CheckBox
        android:id="@+id/checkBoxID_ListItem"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:text="@string/checkBox_String" />


    <Switch
        android:id="@+id/switchID_listItem"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:text="@string/switch_text" />

    <ImageButton
        android:id="@+id/imageButtonID_listItem"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />


</GridLayout>
